improved run script